Fix the zooming problem on mobile screens

--- a/static/main.css
+++ b/static/main.css
@@ -1,5 +1,4 @@
-<meta name="viewport" content="width=device-width, maximum-scale=1.0, initial-scale=1.0">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 @font-face {
   font-family: "ColfaxAI";
@@ -19,13 +18,9 @@
   font-style: normal;
 }
 
-body,
-input {
-  line-height: 1.5;
+body, input {
   color: #353740;
   font-family: "ColfaxAI", Helvetica, sans-serif;
-  margin: 0;
-  padding: 0;
 }
 
 body {
@@ -33,23 +28,21 @@ body {
   flex-direction: column;
   align-items: center;
   overflow-x: hidden;
-
 }
 
 .chat-container {
   max-width: 90%;
   margin: 0 auto;
-  padding-top: 1rem;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-y: auto;
   padding-bottom: 160px;
   margin-bottom: 20px;
-  overflow-y: auto; /* Ensure vertical scrolling */
 }
 
-.user-message,
-.assistant-message {
+.user-message, .assistant-message {
   padding: 0.75rem 1rem;
   border-radius: 4px;
   margin-bottom: 0.5rem;
@@ -68,6 +61,13 @@ body {
   background-color: #f4a460;
 }
 
+.message-input-container, form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .message-input-container {
   position: fixed;
   bottom: 0;
@@ -75,51 +75,32 @@ body {
   right: 0;
   padding: 1rem;
   background: #fff;
-  display: flex;
-  justify-content: center;
   box-sizing: border-box;
-  align-items: start;
-  font-size: 16px;
-}
-
-.message-input-container form {
-  display: flex; /* Use flexbox to layout children */
-  align-items: center; /* Align items vertically */
-  width: 100%; /* Take full width to accommodate children */
-}
-
-form {
-  max-width: 70%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  min-height: 15%;
 }
 
 textarea {
   border: 1px solid #c5c5d2;
   border-radius: 8px;
-  padding: 0.5rem 0.75rem;
+  padding: 8px 12px;
   resize: none;
   overflow: auto;
   margin: 0;
   flex-grow: 3;
-  height min(48px, 5vh);
-  font-size 16px;
-  padding: 8px 12px;
+  min-height: 15%;
+  font-size: 16px;
 }
 
-input[type="submit"],
-input[type="button"] {
+input[type="submit"], input[type="button"] {
   color: #808080;
   background-color: #cd5c5c;
   border: none;
   border-radius: 4px;
   text-align: center;
   cursor: pointer;
-  flex-grow: 1;
   margin: 0;
   padding: 8px 12px;
+  flex-grow: 1;
 }
 
 input[type="submit"] {
@@ -143,7 +124,7 @@ input[type="submit"] {
 
 .typing-indicator {
   margin-left: 0.25rem;
-  font-size: 16px; /* Adjust size as needed */
+  font-size: 16px;
 }
 
 .typing-indicator::after {
@@ -152,8 +133,7 @@ input[type="submit"] {
 }
 
 @keyframes typing {
-  0%,
-  100% {
+  0%, 100% {
     content: "•";
   }
   33% {
@@ -166,10 +146,9 @@ input[type="submit"] {
 
 .button-group {
   display: flex;
-  align-items: center; /* Add this to vertically center the elements */
-  justify-content: space-between; /* Adjust as needed */
+  align-items: center;
+  justify-content: space-between;
 }
-
 
 #ids-container {
   font-size: 0.75rem;
@@ -177,49 +156,42 @@ input[type="submit"] {
   text-align: center;
 }
 
-/* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  display: none;
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Modal Content */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 1.25rem;
   border: 1px solid #888;
-  width: 90%; /* Could be more or less, depending on screen size */
+  width: 90%;
 }
 
-
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
 
-
 .header {
-  flex-wrap: wrap; /* allow wrapping on small screens*/
-  display: flex; /* Use flexbox layout */
+  flex-wrap: wrap;
+  display: flex;
   font-size: 1.4rem;
-  align-items: center; /* Center items vertically */
-  justify-content: flex-start; /* Align items to the start of the container */
+  align-items: center;
+  justify-content: flex-start;
   background-color: white;
-  width: 95%; /* Ensure the header spans the full width */
-  padding: 0.625rem 0; /* Add some vertical padding */
+  width: 95%;
+  padding: 0.625rem 0;
 }
-
 
 .message-role {
   align-self: flex-start;
@@ -231,7 +203,7 @@ input[type="submit"] {
 .message-role.user {
   align-self: flex-end;
   text-align: right;
-  width: 100%
+  width: 100%;
 }
 
 #send-btn {
